# capi

./: .gitignore  CONTRIBUTING.md  README.md  benchmark.py  data.py  default_eval_config.yaml  default_pretrain_config.yaml  eval_classification.py  eval_segmentation.py  eval_visualizations.py  fsdp.py  hubconf.py  model.py  pyproject.toml  train_capi.py  train_distributed.py  utils.py
baselines/: aim_loader.py  beit_loader.py  data2vec2_loader.py  dino_loader.py  dinov2_loader.py  ibot_loader.py  ijepa_loader.py  mae_loader.py  mimrefiner_loader.py  timm_loader.py
